# Diezel

./: CMakeLists.txt  README.md  compileAndRunTests.sh  gpuLinAlg.cu  gpuLinAlg.hpp  kernels.cu
include/: LinearAlgebra.hpp  gpuLinAlg.hpp
src/: CSCMatrix.cu  CSRMatrix.cu  CSRMatrixKernels.cu  Matrix.cu  MatrixKernels.cu  Vector.cu  VectorKernels.cu  gpuLinAlg.cu  kernels.cu  utils.cpp
test/: CSCMatrixUnitTest.cpp  CSRMatrixUnitTest.cpp  MatrixUnitTest.cpp  UnitTest.cu  VectorUnitTest.cpp  run_test.sh  test.cu  testUtils.cpp
